# lite-workflow

./: .gitignore  CLAUDE.md  CURSOR.md  LICENSE  README.md  demo_standalone.py  main.py  prd.md  pyproject.toml  uv_setup.py  设计文档.md
components/: llm_node.py  python_function_node.py  tool_node.py
core/: error_handler.py  state_manager.py
definitions/: graph.py  node_types.py  state.py
doc/: 解锁Agent大脑：构建可控、可追溯的AI智能体工作流.md
engine/: execution_engine.py
example/: demo_comprehensive.py  demo_siliconflow_chat.py  demo_tools.py
examples/: elegant_workflow.py  new_chatmodel_usage.py
src/lite_workflow/: __init__.py  cli.py  demo_comprehensive.py  demo_graph.py  demo_siliconflow_chat.py  main.py
src/lite_workflow/components/: __init__.py  chat_models.py  function_nodes.py  tools.py
src/lite_workflow/core/: __init__.py  error_handler.py  event_bus.py  logger.py  state_manager.py
src/lite_workflow/definitions/: __init__.py  edge.py  graph.py  message.py  node.py  state.py
src/lite_workflow/engine/: __init__.py  execution_engine.py  pregel_engine.py  workflow.py
